# 3DRender

./: .gitignore  CMakeLists.txt  README.md  glad.c  imgui.cpp  main.cpp
Application/: CMakeLists.txt  camera.cpp  camera.h  shader.h
Application/assimp/: mesh.h  model.cpp  model.h  shader.h
Application/camera/: camera.cpp  camera.h  camera_control.cpp  camera_control.h  ortho_camera.cpp  ortho_camera.h  perspective_camera.cpp  perspective_camera.h
assets/shaders/: box.frag  box.vert  floor.frag  floor.vert  fragment.glsl  light.frag  light.vert  light_vertex.vert  model.frag  model.vert  sphere.frag  sphere.vert  vertex.glsl
dependencies/include/glad/: glad.h
dependencies/include/learnopengl/: animation.h  bone.h  mesh.h  model.h  model_animation.h  shader.h
dependencies/lib/: assimp-vc143-mtd.lib
examples/boxparty/: main.cpp
examples/skybox/: main.cpp
glframework/: CMakeLists.txt  shader.cpp  shader.h
instructions/add-camera/: ins.md
instructions/camera_circle/: ins.md
instructions/ortho-metrix/: ins.md
instructions/perspective-matrix/: ins.md
instructions/skeletal-animation/: README.md
